add comment field in estimates

--- a/estimates/index.html
+++ b/estimates/index.html
@@ -472,6 +472,13 @@
 								</div>
 							</div>
 						</th>
+						<th>
+							<div class="table__cell table__cell_headline">
+								<p class="table__text table__text_headline">
+									Comment
+								</p>
+							</div>
+						</th>
 					</tr>
 					<tr class="table__row-content">
 						<td class="table__cell table__cell_date table__cell_content">
@@ -489,9 +496,13 @@
 						<td class="table__cell table__cell_area table__cell_content">
 							<p class="table__text">Houston, TX</p>
 						</td>
-
 						<td class="table__cell table__cell_total table__cell_content">
 							<p class="table__text">$456.00</p>
+						</td>
+						<td class="table__cell table__cell_comment table__cell_content">
+							<p class="table__text">
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, dicta dolore nesciunt delectus et at ab perspiciatis reprehenderit sed temporibus vitae cum neque tempore impedit sequi facere suscipit molestias nihil.
+							</p>
 						</td>
 					</tr>
 				</tbody>
@@ -539,6 +550,11 @@
 								06/25/2019 2:12 pm
 							</p>
 						</div>
+					</div>
+					<div class="table-mobile__cell-row">
+						<p class="table-mobile__cell_comment">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sint harum eligendi modi alias quas cum ratione blanditiis repellat repudiandae possimus, suscipit accusamus tenetur dolor sit corrupti. Quas, voluptatem distinctio.
+						</p>
 					</div>
 				</div>
 			</div>	
