--- a/deposits/index.html
+++ b/deposits/index.html
@@ -302,13 +302,14 @@
 					</div>
 					<ul class="table-navigation-mobile__sort-list sort-list drop-list">
 						<li class="drop-list__item sort-list__item selected">Date</li>
-						<li class="drop-list__item sort-list__item">Name</li>
+						<li class="drop-list__item sort-list__item">Bank Date</li>
+						<li class="drop-list__item sort-list__item">Type</li>
+						<li class="drop-list__item sort-list__item">Service</li>
 						<li class="drop-list__item sort-list__item">Status</li>
-						<li class="drop-list__item sort-list__item">Service Resource</li>
-						<li class="drop-list__item sort-list__item">Area</li>
+						<li class="drop-list__item sort-list__item">Payments</li>
+						<li class="drop-list__item sort-list__item">Net</li>
 						<li class="drop-list__item sort-list__item">Total</li>
-						<li class="drop-list__item sort-list__item">Paid</li>
-						<li class="drop-list__item sort-list__item">Unpaid</li>
+						<li class="drop-list__item sort-list__item">Fee</li>
 						<li class="sort-list__sort-settings sort-settings">
 							<label class="sort-list__sort-settings-item sort-list__sort-settings-item_descending">
 								<svg viewBox="0 0 12 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -631,22 +632,22 @@
 									(06/25/2019)
 								</p>
 							</div>
-							<p class="table-mobile__cell_status ">
-								Done
-							</p>
 							<p class="table-mobile__cell_type ">
 								Checks, Cash
 							</p>
+							<p class="table-mobile__cell_status ">
+								Done
+							</p>
 						</div>
 						<div class="table-mobile__cell-description">
+							<p class="table-mobile__cell_net ">
+								Net: <span class="table-mobile__cell_net-number">$0.00</span>
+							</p>
 							<p class="table-mobile__cell_total ">
 								Total: <span class="table-mobile__cell_total-number">$859.98</span>
 							</p>
 							<p class="table-mobile__cell_fee ">
 								Fee: <span class="table-mobile__cell_fee-number">$859.98</span>
-							</p>
-							<p class="table-mobile__cell_net ">
-								Net: <span class="table-mobile__cell_net-number">$0.00</span>
 							</p>
 						</div>
 					</div>
