add field number payments

--- a/payments/index.html
+++ b/payments/index.html
@@ -399,6 +399,13 @@
 						</th>
 						<th>
 							<div class="table__cell table__cell_headline">
+								<p class="table__text table__text_headline">
+									Number
+								</p>
+							</div>
+						</th>
+						<th>
+							<div class="table__cell table__cell_headline">
 								<div class="table__wrapper-text">
 									<div class="table__filter-btn">
 										<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -535,6 +542,9 @@
 						<td class="table__cell table__cell_type table__cell_content">
 							<p class="table__text">Card</p>
 						</td>
+						<td class="table__cell table__cell_number table__cell_content">
+							<p class="table__text">11223</p>
+						</td>
 						<td class="table__cell table__cell_service table__cell_content">
 							<p class="table__text">Stripe</p>
 						</td>
@@ -558,12 +568,15 @@
 					<div class="table-mobile__cell-row">
 						<div class="table-mobile__cell-title-wrapper">
 							<div class="table-mobile__cell-title">
-								<p class="table-mobile__cell_stripe table-mobile__cell_stripe_title">
-									Stripe
+								<p class="table-mobile__cell_type table-mobile__cell_type_title">
+									Card
+								</p>
+								<p class="table-mobile__cell_number table-mobile__cell_number_title">
+									(11223)
 								</p>
 							</div>
-							<p class="table-mobile__cell_type">
-								Card
+							<p class="table-mobile__cell_service">
+								Stripe
 							</p>
 							<p class="table-mobile__cell_status">
 								Done
