--- a/schedule/index.html
+++ b/schedule/index.html
@@ -276,25 +276,68 @@
 					</div>
 				</div>
 				<div class="boards__board board"> 
-					<div class="board__row">
-						<div class="board__aside">
-							<div class="board__worker">
+					<table class="board__table">
+						<tbody>
+							<tr class="board__row">
+								<td class="board__aside">
+									<div class="board__worker ">
+										<div class="board__worker-img">
+		
+										</div>
+										<div class="board__worker-info">
+											<p class="board__worker-nickname">
+												Gary
+											</p>
+											<p class="board__worker-name-surname">
+												Igor Nelson
+											</p>
+											<p class="board__worker-post">
+												Appliance Technician
+											</p>
+										</div>
+									</div>
+								</td>
+								<td class="board__main">
+									<table class="board__timegrid timegrid">
+										<tbody>
+											<tr class="timegrid__row">
 
-							</div>
-						</div>
-						<div class="board__main">
-							<table class="board__timegrid timegrid">
-								<tbody>
-									<tr>
-										<td class="timegrid__cell">
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+							<tr class="board__row">
+								<td class="board__aside">
+									<div class="board__worker ">
+										<div class="board__worker-img">
+		
+										</div>
+										<div class="board__worker-info">
+											<p class="board__worker-nickname">
+												Agustina
+											</p>
+											<p class="board__worker-name-surname">
+												Andriy Nelson
+											</p>
+											<p class="board__worker-post">
+												Appliance Technician
+											</p>
+										</div>
+									</div>
+								</td>
+								<td class="board__main">
+									<table class="board__timegrid timegrid">
+										<tbody>
+											<tr class="timegrid__row">
 
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</section>
