--- a/schedule/index.html
+++ b/schedule/index.html
@@ -135,7 +135,7 @@
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
-								<td class="calendar-table__cell calendar-table__cell-day"0></td>
+								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
@@ -144,7 +144,7 @@
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
-								<td class="calendar-table__cell calendar-table__cell-day"0></td>
+								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
 								<td class="calendar-table__cell calendar-table__cell-day"></td>
@@ -173,89 +173,94 @@
 			</div>
 		</section>
 		<section class="boards">
-			<div class="boards__dates">
-				<div class="boards__dates-item">
-						<p class="boards__dates-item-time">
-							Sun, Mar 8 2020
-						</p>
+			<div class="boards__dates-wrapper">
+
+				<div class="boards__dates">
+					<div class="boards__dates-item">
+							<p class="boards__dates-item-time">
+								Sun, Mar 8 2020
+							</p>
+					</div>
 				</div>
 			</div>
-			<div class="boards__timeline">
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">12pm</p>
+			<div class="boards__timeline-wrapper">
+				<div class="boards__timeline">
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">12pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">1am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">2am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">3am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">4am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">5am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">6am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">7am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">8am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">9am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">10am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">11am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">12am</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">1pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">2pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">3pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">4pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">5pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">6pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">7pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">8pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">9pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">10pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">11pm</p>
+					</div>
+					<div class="timeline__item" style="width: 4.166666666666667%">
+						<p class="timeline__item-time">12pm</p>
+					</div>		
 				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">1am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">2am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">3am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">4am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">5am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">6am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">7am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">8am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">9am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">10am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">11am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">12am</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">1pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">2pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">3pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">4pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">5pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">6pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">7pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">8pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">9pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">10pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">11pm</p>
-				</div>
-				<div class="timeline__item" style="width: 4.166666666666667%">
-					<p class="timeline__item-time">12pm</p>
-				</div>		
 			</div>
 			<div class="boards__item">
 				<div class="boards__item-area">
