--- a/schedule/index.html
+++ b/schedule/index.html
@@ -303,13 +303,11 @@
 									</div>
 								</td>
 								<td class="board__main">
-									<table class="board__timegrid timegrid">
-										<tbody>
-											<tr class="timegrid__row">
+									<div class="board__timegrid timegrid">
+										<div class="timegrid__row">
 
-											</tr>
-										</tbody>
-									</table>
+										</div>
+									</div>
 								</td>
 							</tr>
 							<tr class="board__row">
@@ -332,13 +330,11 @@
 									</div>
 								</td>
 								<td class="board__main">
-									<table class="board__timegrid timegrid">
-										<tbody>
-											<tr class="timegrid__row">
+									<div class="board__timegrid timegrid">
+										<div class="timegrid__row">
 
-											</tr>
-										</tbody>
-									</table>
+										</div>
+									</div>
 								</td>
 							</tr>
 						</tbody>
