--- a/schedule/index.html
+++ b/schedule/index.html
@@ -281,10 +281,9 @@
 					</div>
 				</div>
 				<div class="boards__board board"> 
-					<table class="board__table">
-						<tbody>
-							<tr class="board__row">
-								<td class="board__aside">
+					<div class="board__table">
+							<div class="board__row">
+								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
 		
@@ -301,17 +300,17 @@
 											</p>
 										</div>
 									</div>
-								</td>
-								<td class="board__main">
+								</div>
+								<div class="board__main">
 									<div class="board__timegrid timegrid">
 										<div class="timegrid__row">
 
 										</div>
 									</div>
-								</td>
-							</tr>
-							<tr class="board__row">
-								<td class="board__aside">
+								</div>
+							</div>
+							<div class="board__row">
+								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
 		
@@ -328,17 +327,16 @@
 											</p>
 										</div>
 									</div>
-								</td>
-								<td class="board__main">
+								</div>
+								<div class="board__main">
 									<div class="board__timegrid timegrid">
 										<div class="timegrid__row">
 
 										</div>
 									</div>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+								</div>
+							</div>
+					</div>
 				</div>
 			</div>
 		</section>
