--- a/schedule/index.html
+++ b/schedule/index.html
@@ -339,6 +339,83 @@
 					</div>
 				</div>
 			</div>
+			<div class="boards__item">
+				<div class="boards__item-area">
+					<div class="boards__item-area_left">
+						<div class="boards__item-area-btn-hide">
+							<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
+							</svg>	
+						</div>
+						<p class="boards__item-area-town">
+								Houston, TX
+						</p>
+					</div>
+					<div class="boards__item-area_right">
+						<p class="boards__item-area-time">
+							Friday, March 06, 2020 8:30
+						</p>
+					</div>
+				</div>
+				<div class="boards__board board"> 
+					<div class="board__table">
+						<div class="board__row">
+							<div class="board__aside">
+								<div class="board__worker ">
+									<div class="board__worker-img">
+	
+									</div>
+									<div class="board__worker-info">
+										<p class="board__worker-nickname">
+											Gray
+										</p>
+										<p class="board__worker-name-surname">
+											Mary Gray
+										</p>
+										<p class="board__worker-post">
+											Appliance Technician
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="board__main">
+								<div class="board__timegrid timegrid">
+									<div class="timegrid__row">
+
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="board__row">
+							<div class="board__aside">
+								<div class="board__worker ">
+									<div class="board__worker-img">
+	
+									</div>
+									<div class="board__worker-info">
+										<p class="board__worker-nickname">
+											Nasty
+										</p>
+										<p class="board__worker-name-surname">
+											Nasty Nelson
+										</p>
+										<p class="board__worker-post">
+											Appliance Technician
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="board__main">
+								<div class="board__timegrid timegrid">
+									<div class="timegrid__row">
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</div>
 	<script>
