--- a/schedule/index.html
+++ b/schedule/index.html
@@ -153,11 +153,16 @@
 					</div>
 				</div>
 				<div class="controls__date-select">
-					<div class="controls__date-select-prev">
-						prev
-					</div>
+					
 					<div class="controls__date-select-next">
-						next
+						<svg viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M1 6L6 1.5L11 6 " stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+						</svg>
+					</div>
+					<div class="controls__date-select-prev">
+						<svg viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M1 6L6 1.5L11 6 " stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+						</svg>
 					</div>
 				</div>
 			</div>
