--- a/schedule/index.html
+++ b/schedule/index.html
@@ -179,114 +179,34 @@
 		</section>
 		<section class="boards">
 			<div class="boards__dates-wrapper">
-
 				<div class="boards__dates">
-					<div class="boards__dates-item">
-							<p class="boards__dates-item-time">
-								Sun, Mar 8 2020
-							</p>
-					</div>
 				</div>
 			</div>
 			<div class="boards__timeline-wrapper">
-				<div class="boards__timeline">
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">12pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">1am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">2am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">3am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">4am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">5am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">6am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">7am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">8am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">9am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">10am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">11am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">12am</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">1pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">2pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">3pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">4pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">5pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">6pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">7pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">8pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">9pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">10pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">11pm</p>
-					</div>
-					<div class="timeline__item" style="width: 4.166666666666667%">
-						<p class="timeline__item-time">12pm</p>
-					</div>		
+				<div class="boards__timeline">	
 				</div>
 			</div>
-			<div class="boards__item">
-				<div class="boards__item-area">
-					<div class="boards__item-area_left">
-						<div class="boards__item-area-btn-hide">
-							<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
-							</svg>	
+			<div class="board__items">
+				<div class="boards__item">
+					<div class="boards__item-area">
+						<div class="boards__item-area_left">
+							<div class="boards__item-area-btn-hide">
+								<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
+								</svg>	
+							</div>
+							<p class="boards__item-area-town">
+								Miami, FL
+							</p>
 						</div>
-						<p class="boards__item-area-town">
-							Miami, FL
-						</p>
+						<div class="boards__item-area_right">
+							<p class="boards__item-area-time">
+								Friday, March 06, 2020 9:30
+							</p>
+						</div>
 					</div>
-					<div class="boards__item-area_right">
-						<p class="boards__item-area-time">
-							Friday, March 06, 2020 9:30
-						</p>
-					</div>
-				</div>
-				<div class="boards__board board"> 
-					<div class="board__table">
+					<div class="boards__board board"> 
+						<div class="board__table">
 							<div class="board__row">
 								<div class="board__aside">
 									<div class="board__worker ">
@@ -341,79 +261,80 @@
 									</div>
 								</div>
 							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="boards__item">
-				<div class="boards__item-area">
-					<div class="boards__item-area_left">
-						<div class="boards__item-area-btn-hide">
-							<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
-							</svg>	
+				<div class="boards__item">
+					<div class="boards__item-area">
+						<div class="boards__item-area_left">
+							<div class="boards__item-area-btn-hide">
+								<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
+								</svg>	
+							</div>
+							<p class="boards__item-area-town">
+									Houston, TX
+							</p>
 						</div>
-						<p class="boards__item-area-town">
-								Houston, TX
-						</p>
-					</div>
-					<div class="boards__item-area_right">
-						<p class="boards__item-area-time">
-							Friday, March 06, 2020 8:30
-						</p>
-					</div>
-				</div>
-				<div class="boards__board board"> 
-					<div class="board__table">
-						<div class="board__row">
-							<div class="board__aside">
-								<div class="board__worker ">
-									<div class="board__worker-img">
-	
-									</div>
-									<div class="board__worker-info">
-										<p class="board__worker-nickname">
-											Gray
-										</p>
-										<p class="board__worker-name-surname">
-											Mary Gray
-										</p>
-										<p class="board__worker-post">
-											Appliance Technician
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="board__main">
-								<div class="board__timegrid timegrid">
-									<div class="timegrid__row">
-
-									</div>
-								</div>
-							</div>
+						<div class="boards__item-area_right">
+							<p class="boards__item-area-time">
+								Friday, March 06, 2020 8:30
+							</p>
 						</div>
-						<div class="board__row">
-							<div class="board__aside">
-								<div class="board__worker ">
-									<div class="board__worker-img">
-	
+					</div>
+					<div class="boards__board board"> 
+						<div class="board__table">
+							<div class="board__row">
+								<div class="board__aside">
+									<div class="board__worker ">
+										<div class="board__worker-img">
+		
+										</div>
+										<div class="board__worker-info">
+											<p class="board__worker-nickname">
+												Gray
+											</p>
+											<p class="board__worker-name-surname">
+												Mary Gray
+											</p>
+											<p class="board__worker-post">
+												Appliance Technician
+											</p>
+										</div>
 									</div>
-									<div class="board__worker-info">
-										<p class="board__worker-nickname">
-											Nasty
-										</p>
-										<p class="board__worker-name-surname">
-											Nasty Nelson
-										</p>
-										<p class="board__worker-post">
-											Appliance Technician
-										</p>
+								</div>
+								<div class="board__main">
+									<div class="board__timegrid timegrid">
+										<div class="timegrid__row">
+	
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="board__main">
-								<div class="board__timegrid timegrid">
-									<div class="timegrid__row">
-
+							<div class="board__row">
+								<div class="board__aside">
+									<div class="board__worker ">
+										<div class="board__worker-img">
+		
+										</div>
+										<div class="board__worker-info">
+											<p class="board__worker-nickname">
+												Nasty
+											</p>
+											<p class="board__worker-name-surname">
+												Nasty Nelson
+											</p>
+											<p class="board__worker-post">
+												Appliance Technician
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="board__main">
+									<div class="board__timegrid timegrid">
+										<div class="timegrid__row">
+	
+										</div>
 									</div>
 								</div>
 							</div>
