--- a/schedule/index.html
+++ b/schedule/index.html
@@ -211,7 +211,7 @@
 								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
-		
+											<img src="./images/profile_bg.jpg" alt="">
 										</div>
 										<div class="board__worker-info">
 											<p class="board__worker-nickname">
@@ -238,7 +238,7 @@
 								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
-		
+											<img src="./images/profile_bg.jpg" alt="">
 										</div>
 										<div class="board__worker-info">
 											<p class="board__worker-nickname">
@@ -260,6 +260,9 @@
 										</div>
 									</div>
 								</div>
+							</div>
+							<div class="timegrid__realtime-line">
+
 							</div>
 						</div>
 					</div>
@@ -288,7 +291,7 @@
 								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
-		
+											<img src="./images/profile_bg.jpg" alt="">
 										</div>
 										<div class="board__worker-info">
 											<p class="board__worker-nickname">
@@ -315,7 +318,7 @@
 								<div class="board__aside">
 									<div class="board__worker ">
 										<div class="board__worker-img">
-		
+											<img src="./images/profile_bg.jpg" alt="">
 										</div>
 										<div class="board__worker-info">
 											<p class="board__worker-nickname">
