--- a/schedule/index.html
+++ b/schedule/index.html
@@ -42,7 +42,7 @@
 								<option value="6">6am</option>
 								<option value="7">7am</option>
 								<option value="8">8am</option>
-								<option value="9">9am</option>
+								<option value="9" selected>9am</option>
 								<option value="10">10am</option>
 								<option value="11">11am</option>
 								<option value="12">12pm</option>
@@ -78,7 +78,7 @@
 								<option value="15">3pm</option>
 								<option value="16">4pm</option>
 								<option value="17">5pm</option>
-								<option value="18">6pm</option>
+								<option value="18" selected>6pm</option>
 								<option value="19">7pm</option>
 								<option value="20">8pm</option>
 								<option value="21">9pm</option>
@@ -326,6 +326,11 @@
 									<div class="board__timegrid timegrid">
 										<div class="timegrid__row">
 
+										</div>
+										<div class="appoitments">
+											<div class="appointment">
+												
+											</div>
 										</div>
 									</div>
 								</div>
